	without a target, rather than target 'all'.  This is now the
	same as on Unix, and was announced in the NEWS for 2.9.0.

    o	Help in base and recommended packages is no longer zipped: text,
	latex and examples files are now built when needed.

	Options --use-zip and --use-zip-help in R CMD INSTALL are no
	longer available and --auto-zip only zips data (or not).


INSTALLATION

    o	The defaults have been changed: they now are to use HTML help,
	not install prebuilt HTML help pages and not install CHM help.
	[Not yet for the MSI installer.]

	Binary packages are currently installed with all the types of
	help they contain [but that may change before release].

    o	The categories in the installers have been simplified.  Now the
	files to support installation of source packages are always
	installed (they were now only 0.7Mb), and there are no longer
	categories 'latex' and 'Rd'.




	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.2 patched


BUG FIXES

    o	If a nonstandard font were specified in Rconsole, the GUI
    	preferences dialog would crash R.
    	


		CHANGES IN R VERSION 2.9.2


NEW FEATURES

    o	The --internet2 command line option sets a flag internally;
	that flag is now visible and controllable from R using the
	setInternet2() function.

    o	file.access() proved unreliable on some network-mounted file
	systems (probably a Samba issue), so it has been replaced in R
	CMD INSTALL by a directory creation test.  (Reported by Simon
	Urbanek and Ruth Ripley.)

    o 	Sys.glob() attempts to handle UNC paths starting with \\ (which
	according to the globbing rules is escaped \), thanks to a patch
	from Tony Plate.
	
	
BUG FIXES

    o	Topics marked as "internal" in help files were not visible
    	from CHM help.

    o	The bmp(), jpeg(), png() and tiff() devices were not scaling