@@ -14,7 +14,7 @@ G_FLAG=-gdwarf-2
 ## ============== configuration macros for building R ===================
 
 # Should CHM help be built?  Any value other than TRUE disables this
-USE_CHM = TRUE
+USE_CHM = FALSE
 
 # Comment out if the msvcrt.dll malloc/free is required (not tested recently)
 LEA_MALLOC=YES
@@ -26,7 +26,7 @@ ATLAS_PATH=/R/ATLAS/lib/WinNT_P4SSE2
 # Support for the ACML and Goto BLASes has been withdrawn: see R-admin.html
 
 # Where does 'HTML Help Workshop' live? (unused if compiled HTML help is
-# not selectred by USE_CHM = TRUE). Spaces allowed.
+# not selected by USE_CHM = TRUE). Spaces allowed.
 # Used to build Rchtml.dll: hhc.exe must also be in the path.
 HHWDIR=C:/Program Files/HTML Help Workshop
 
